[project]
name = "hamster-inu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "roboid>=1.7.3",
    "tf-keras>=2.20.1",
]
